# flashcards_creator

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: config.py
app/services/: anki.py  orchestrator.py  video.py  youtube.py
