[project]
name = "flashcards-creator"
version = "0.1.0"
description = "Backend para criar flashcards a partir de vídeos do YouTube"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "yt-dlp>=2024.4.9",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.0.0",
    "ffmpeg-python>=0.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pyright]
include = ["app"]
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = false
